[gd_scene load_steps=2 format=3 uid="uid://bfyupolo6rjye"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_cvu0b"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1190.0
offset_bottom = -587.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cvu0b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.077
anchor_bottom = 0.14
offset_right = 1554.43
offset_bottom = 737.66
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Start"

[node name="Hat" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Hat"

[node name="Cloak" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "CLOAK"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Hat" to="." method="_on_hat_pressed"]
[connection signal="pressed" from="VBoxContainer/Cloak" to="." method="_on_cloak_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
